# ToyApp

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/plant/toyapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/plant/toyapp/: AbsLazyFragment.java  ActiveActivity.java  BaseActivity.java  CountDownView.java  LoginActivity.java  LoginChecker.java  MainActivity.java  SplashActivity.java  ToyApplication.java
app/src/main/java/com/plant/toyapp/async/: AbsBaseModel.java  AbsHandlerTask.java  AsyncExecutorService.java  ICallback.java  IExecuteable.java
app/src/main/java/com/plant/toyapp/glide/: OkHttpFetcher.java  OkHttpGlideUrlLoader.java  ProgressIntercept.java  ProgressListener.java  ProgressResponseBody.java  ToyAppGlideModule.java
app/src/main/java/com/plant/toyapp/lego/: ILego.java  ILegoLifecycle.java  ILegoLink.java
app/src/main/java/com/plant/toyapp/ob/: Observable.java  Observer.java
app/src/main/java/com/plant/toyapp/permission/: MPermission.java
app/src/main/java/com/plant/toyapp/recyclerview/: EmptyRecyclerView.java  QuickAdapter.java  RVAdapterWrapper.java  SharpItemDecoration.java  SharpLayoutManager.java  SimpleItemTouchCallback.java
app/src/main/res/layout/: activity_active.xml  activity_login.xml  activity_main.xml  activity_splash.xml  rv_empty.xml  rv_footer.xml  rv_header.xml  rv_item.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/plant/toyapp/: ExampleUnitTest.java
(+28 files in other folders)
